# llm-wk

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
docs/: OVERVIEW.md
examples/: quickstart_http.py  quickstart_library.py
llmwiki/: admin_ui.py  classifier.py  cli.py  config.py  coordinator.py  dashboard.py  mcp_server.py  models.py  pipeline.py  query.py  text.py
llmwiki/api/: __init__.py  app.py  routers.py  schemas.py
llmwiki/auth/: __init__.py  apikey.py  authz.py  base.py  stored.py
llmwiki/gates/: __init__.py  base.py  builtin.py  chain.py
llmwiki/providers/: __init__.py  base.py  fake.py  litellm_provider.py
llmwiki/rules/: __init__.py  base.py  catalog.py  engine.py  palette.py
llmwiki/storage/: __init__.py  content_store.py  index_store.py
tests/contract/: test_mcp_contract.py
tests/integration/: test_admin_ui.py  test_api.py  test_api_keys_store.py  test_cli_and_dashboard.py  test_cli_seed.py  test_collection_config.py  test_content_store.py  test_coordinator.py  test_index_store.py  test_keys_api.py  test_pipeline.py  test_pipeline_parity.py  test_pipeline_quality.py  test_query_api.py  test_query_service.py  test_rule_types_api.py
tests/unit/: test_auth.py  test_classifier.py  test_config.py  test_fake_provider.py  test_gates.py  test_knowledge_provider.py  test_litellm_provider.py  test_models.py  test_rule_catalog.py  test_rule_engine.py  test_rules_base.py  test_rules_existence.py  test_rules_routing.py  test_rules_update_replace.py  test_rules_validity.py  test_stored_auth.py  test_text.py
(+9 files in other folders)
