[project]
name = "llmwiki"
version = "0.1.0"
description = "Open-source LLM-Wiki ingest decision engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "litellm>=1.40",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
llmwiki = "llmwiki.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmwiki*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
